--- a/reason.html
+++ b/reason.html
@@ -132,7 +132,7 @@
 			</div>
 			<ul class="uk-nav uk-nav-parent-icon box-white list-setting" data-uk-nav="">
 				<li class="item-setting">
-					<a href="index.html">
+					<a href="home.html">
 						<img src="public/images/icon/notification.png" class="icon-setting">
 						<span class="uk-text-middle uk-text-truncate name-setting">Thông báo</span>
 					</a>
