--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 </head>
 <body>
 
-	<div class="text-center">
+<!-- 	<div class="text-center">
 		<img class="catchalogo-login" src="public/images/catcha-foot.png" alt="Catcha - Ứng dụng quản lý feedback, chăm sóc ngay khi khách hàng bước chân vào cửa hàng">
-	</div>
+	</div> -->
 	<div class="uk-text-center">
 		<a href="home.html" class="btn-login uk-button-primary">Đăng ký</a>
 		<a href="" class="btn-login uk-button-danger">Đăng nhập</a>
