--- a/index.html
+++ b/index.html
@@ -50,15 +50,40 @@
       line-height: 1.3;
     }
 
+    .slider-container {
+      position: relative;
+      width: 100%;
+      overflow: hidden;
+    }
+
     .slider {
       display: flex;
-      overflow-x: scroll;
+      transition: transform 0.5s ease-in-out;
       scroll-snap-type: x mandatory;
     }
 
     .slider img {
-      scroll-snap-align: center;
       min-width: 100%;
+      scroll-snap-align: center;
+    }
+
+    /* Navigation buttons */
+    .slider-nav {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background-color: rgba(0, 0, 0, 0.5);
+      color: white;
+      padding: 10px;
+      cursor: pointer;
+    }
+
+    .slider-nav.left {
+      left: 10px;
+    }
+
+    .slider-nav.right {
+      right: 10px;
     }
 
     .letter-line {
@@ -98,10 +123,14 @@
     <img src="letter.jpg" alt="Second full screen image" />
   </section>
 
-  <section class="slider">
-    <img src="slider1.png" alt="Slide 1" />
-    <img src="slider2.png" alt="Slide 2" />
-    <img src="slider3.png" alt="Slide 3" />
+  <section class="slider-container">
+    <div class="slider" id="slider">
+      <img src="slider1.png" alt="Slide 1" />
+      <img src="slider2.png" alt="Slide 2" />
+      <img src="slider3.png" alt="Slide 3" />
+    </div>
+    <div class="slider-nav left" onclick="moveSlide(-1)">&#10094;</div>
+    <div class="slider-nav right" onclick="moveSlide(1)">&#10095;</div>
   </section>
 
   <section class="event-time">
@@ -154,6 +183,22 @@
         document.getElementById("countdown").innerHTML = "Event started!";
       }
     }, 1000);
+
+    //slider
+    let currentIndex = 0;
+    function moveSlide(direction) {
+      const slider = document.getElementById('slider');
+      const totalSlides = slider.children.length;
+
+      currentIndex += direction;
+      if (currentIndex < 0) {
+        currentIndex = totalSlides - 1;
+      } else if (currentIndex >= totalSlides) {
+        currentIndex = 0;
+      }
+      slider.style.transform = `translateX(-${currentIndex * 100}%)`;
+    }
+
   </script>
 </body>
 </html>
