--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Văn Hiến - Ngọc Ánh</title>
+  <title>Trung Chiến - Quỳnh Anh</title>
   <style>
     body {
       margin: 0;
@@ -17,13 +17,23 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      /* height: 100vh; */
       text-align: center;
       position: relative;
     }
 
     img {
       width: 100%;
+      /* height: 100%;
+      object-fit: cover; */
     }
+
+    /* .cover img {
+      width: 100%;
+      height: 100%;
+      margin-top: 50%;
+      object-fit: cover;
+    } */
 
     .letter img {
       margin-top: 50px;
@@ -40,43 +50,19 @@
       line-height: 1.3;
     }
 
-    .slider-container {
-      position: relative;
-      width: 100%;
-      overflow: hidden;
-    }
-
     .slider {
       display: flex;
-      transition: transform 0.5s ease-in-out;
+      overflow-x: scroll;
       scroll-snap-type: x mandatory;
     }
 
     .slider img {
-      min-width: 100%;
       scroll-snap-align: center;
-    }
-
-    .slider-nav {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      background-color: rgba(0, 0, 0, 0.5);
-      color: white;
-      padding: 10px;
-      cursor: pointer;
-    }
-
-    .slider-nav.left {
-      left: 10px;
-    }
-
-    .slider-nav.right {
-      right: 10px;
+      min-width: 100%;
     }
 
     .letter-line {
-      padding: 30px auto;
+      padding: 30px;
     }
 
     .qr-section {
@@ -101,10 +87,6 @@
       font-weight: bold;
       color: #ff5722;
     }
-    .locations a {
-      margin: 30px;
-    }
-
   </style>
 </head>
 <body>
@@ -116,40 +98,19 @@
     <img src="letter.jpg" alt="Second full screen image" />
   </section>
 
-  <section class="slider-container">
-    <div class="slider" id="slider">
-      <img src="slider1.png" alt="Slide 1" />
-      <img src="slider2.png" alt="Slide 2" />
-      <img src="slider3.png" alt="Slide 3" />
-    </div>
-    <div class="slider-nav left" onclick="moveSlide(-1)">&#10094;</div>
-    <div class="slider-nav right" onclick="moveSlide(1)">&#10095;</div>
-  </section>
-  
-  <section class="letter-line">
-    <img src="line2.png" alt="Send-a-gif" />
+  <section class="slider">
+    <img src="slider1.png" alt="Slide 1" />
+    <img src="slider2.png" alt="Slide 2" />
+    <img src="slider3.png" alt="Slide 3" />
   </section>
 
   <section class="event-time">
-    <b>Cùng đếm ngược thời gian:</b>
-  </section>
-  <section class="event-time">
+    <p>Countdown:</p>
     <div id="countdown">
-      <span id="days"></span> ngày
-      <span id="hours"></span> giờ
+      <span id="days"></span> days
+      <span id="hours"></span> hours
     </div>
   </section>
-
-  <section class="letter-line">
-    <img src="line2.png" alt="Send-a-gif" />
-  </section>
-
-  <section>
-    <p>Thông tin phản hồi</p>
-    <p>Để thuận tiện cho việc sắp xếp chỗ ngồi, vui lòng phản hồi giúp vợ chồng mình nhé!</p>  
-  </section>
-
-
 
   <section class="letter-line">
     <img src="letter-line.png" alt="Send-a-gif" />
@@ -166,19 +127,13 @@
     <div>
       <img class="qrcode" src="qrcode2.png" alt="QR Code 2" />
       <p><b>Nguyen Ngoc Anh</b></p>
-      <span>19037272004015</span>
+      <span>19029824148669</span>
     </div>
   </section>
 
   <section class="locations">
-    <a href="https://maps.app.goo.gl/QKwVNDpTiN8DNA7R6" target="_blank">
-      <p>Google maps:</p>
-      <p>Thôn Chùa, Xã An Châu, Tp. Hải Dương</p>
-    </a>
-    <a href="https://maps.app.goo.gl/FESJAfsn5AjLwTue7" target="_blank">
-      <p>Google maps:</p>
-      <p>Số 150 Thôn Đức Thịnh, Cạnh UBND Xã Tản Lĩnh, Ba Vì</p>
-    </a>
+    <a href="https://maps.google.com?q=Location+A" target="_blank">Location A</a>
+    <a href="https://maps.google.com?q=Location+B" target="_blank">Location B</a>
   </section>
 
   <section class="thank-you">
@@ -196,25 +151,9 @@
       document.getElementById("hours").innerHTML = hours;
       if (timeLeft < 0) {
         clearInterval(countdownFunction);
-        document.getElementById("countdown").innerHTML = "Happy wedding!";
+        document.getElementById("countdown").innerHTML = "Event started!";
       }
     }, 1000);
-
-    //slider
-    let currentIndex = 0;
-    function moveSlide(direction) {
-      const slider = document.getElementById('slider');
-      const totalSlides = slider.children.length;
-
-      currentIndex += direction;
-      if (currentIndex < 0) {
-        currentIndex = totalSlides - 1;
-      } else if (currentIndex >= totalSlides) {
-        currentIndex = 0;
-      }
-      slider.style.transform = `translateX(-${currentIndex * 100}%)`;
-    }
-
   </script>
 </body>
 </html>
